# test-rust-reqwest-pool-1

./: .gitignore  Cargo.toml  README.md
src/: config.rs  errors.rs  main.rs  server.rs
src/models/: search_result.rs
src/services/: google_search.rs  mod.rs
