[package]
name = "test-rust-reqwest-pool-1"
version = "0.1.0"
authors = ["Chakrit W <quaos.qrz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.7"
log = { version = "^0.4", features = ["std", "serde"] }
reqwest = { version = "^0.10", features = ["gzip", "json", "native-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^0.2", features = ["full"] }
warp = "^0.2"
